# 2023_wacv_vqm_challenge

./: .gitignore  Dockerfile  LICENSE  README.md  docker_build.sh  docker_run.sh  pyproject.toml  requirements.txt
vqm/: __init__.py  __main__.py  model.py
